# ANN_Churn_Classifier

./: .gitignore  ANN.ipynb  Readme.md  app.py  model.h5  model.keras  prediction.ipynb  pyproject.toml  requirements.txt
