[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "churn-classifier"
version = "1.0.0"
description = "ANN Churn Classification Model"
requires-python = ">=3.9, <3.13"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "streamlit",
    "tensorflow-cpu",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]
